--- a/1.html
+++ b/1.html
@@ -3,15 +3,37 @@
 <head>
 <title>WEB1 - HTML</title>
 <meta charset="utf-8">
+<style>
+    a {
+        color:black;
+        text-decoration: none;
+    }
+
+    .saw {
+        color:gray
+    }
+
+    h1 {
+        font-size: 45px;
+        text-align: center;
+    }
+</style>
 </head>
 
 <body>
-<h1><a href="index.html">W3C</a></h1>
+    <h1><a href="index.html">W3C</a></h1>
+        <ul>
+            <li><a href="1.html" class="saw">HTML</a></li>
+            <li><a href="2.html" class="saw">CSS</a></li>
+            <li><a href="3.html">JavaScript</a></li>
+        </ul>
+<!--
 <ul>
     <li><a href="1.html">HTML</a></li>
-    <li><a href="2.html">CSS</a></li>
+    <li><a href="2.html" style="color:red; text-decoration:underline">CSS</a></li>
     <li><a href="3.html">JavaScript</a></li>
-</ul>
+</ul
+-->
 
 <h2>HTML 공부하자!</h2>
 
@@ -26,12 +48,11 @@ HTML/CSS->JS->J<strong>S library-><u>node</u> js</storo>, express(back end)
 <p>
 <div id="disqus_thread"></div>
 <script>
-
 /**
 *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
 *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
 /*
-var disqus_config = function () {
+var disqus_config = function () { 
 this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
 this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
 };
@@ -43,7 +64,7 @@ s.setAttribute('data-timestamp', +new Date());
 (d.head || d.body).appendChild(s);
 })();
 </script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>                            
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 </p>
 </body>
 </html>
