--- a/2.html
+++ b/2.html
@@ -3,24 +3,29 @@
 <head>
 <title>WEB1 - thml</title>
 <meta charset="utf-8">
+<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-<h1><a href="index.html">W3C</a></h1>
-<ul>
-    <li><a href="1.html">HTML</a></li>
-    <li><a href="2.html">CSS</a></li>
-    <li><a href="3.html">JavaScript</a></li>
-</ul>
+<h1><a href="index.html">CSS</a></h1>
+<div id="grid">
+    <ul>
+        <li><a href="1.html">HTML</a></li>
+        <li><a href="2.html">CSS</a></li>
+        <li><a href="3.html">JavaScript</a></li>
+    </ul>
 
-<h2>CSS 공부하자!</h2>
+    <div id="article">
+        <h2>CSS 공부하자!</h2>
+            <p>
+                Cascading Style Sheets (<a href="https://en.wikipedia.org/wiki/Cascading_Style_Sheets">CSS</a>) is a style sheet language used for describing the 
+                presentation of a document written in a markup language like HTML.
+                [1] CSS is a cornerstone technology of the World Wide Web, alongside HTML and 
+                JavaScript.[2]
+            </p>
+            <img src="coding.jpg" width="100%">
+    </div>
+</div>
 
-HTML/CSS->JS->J<strong>S library-><u>node</u> js</storo>, express(back end)
-
-<p><a href="https://www.w3.org/html/" target="_blank", title="HTML5 specification">Hypertext Markup Language (HTML)</a> is the standard markup language for creating web pages and web applications. With Cascading Style Sheets (CSS) and JavaScript, it forms a triad of cornerstone technologies for the World Wide Web.[4]</p>
-
-<p>Web browsers receive HTML documents from a web server or from local storage and render the documents into multimedia web pages. HTML describes the structure of a web page semantically and originally included cues for the appearance of the document.</p>
-<img src="coding.jpg" width="100%">
-<p style="margin-top:40px;">HTML elements are the building blocks of HTML pages. With HTML constructs, images and other objects such as interactive forms may be embedded into the rendered page. HTML provides a means to create structured documents by denoting structural semantics for text such as headings, paragraphs, lists, links, quotes and other items. HTML elements are delineated by tags, written using angle brackets. Tags such as "img" and "input" directly introduce content into the page. Other tags such as "p" surround and provide information about document text and may include other tags as sub-elements. Browsers do not display the HTML tags, but use them to interpret the content of the page.</p>
 </body>
 </html>
