--- a/3.html
+++ b/3.html
@@ -1,26 +1,19 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
 <head>
-<title>WEB1 - JavaScript</title>
-<meta charset="utf-8">
+  <title>WEB1 - JavaScript</title>
+  <meta charset="utf-8">
 </head>
-
 <body>
-<h1><a href="index.html">W3C</a></h1>
-<ul>
+  <h1><a href="index.html">WEB</a></h1>
+  <ol>
     <li><a href="1.html">HTML</a></li>
     <li><a href="2.html">CSS</a></li>
     <li><a href="3.html">JavaScript</a></li>
-</ul>
-
-<h2>JavaScript 공부하자!</h2>
-
-HTML/CSS->JS->J<strong>S library-><u>node</u> js</storo>, express(back end)
-
-<p><a href="https://www.w3.org/html/" target="_blank", title="HTML5 specification">Hypertext Markup Language (HTML)</a> is the standard markup language for creating web pages and web applications. With Cascading Style Sheets (CSS) and JavaScript, it forms a triad of cornerstone technologies for the World Wide Web.[4]</p>
-
-<p>Web browsers receive HTML documents from a web server or from local storage and render the documents into multimedia web pages. HTML describes the structure of a web page semantically and originally included cues for the appearance of the document.</p>
-<img src="coding.jpg" width="100%">
-<p style="margin-top:40px;">HTML elements are the building blocks of HTML pages. With HTML constructs, images and other objects such as interactive forms may be embedded into the rendered page. HTML provides a means to create structured documents by denoting structural semantics for text such as headings, paragraphs, lists, links, quotes and other items. HTML elements are delineated by tags, written using angle brackets. Tags such as "img" and "input" directly introduce content into the page. Other tags such as "p" surround and provide information about document text and may include other tags as sub-elements. Browsers do not display the HTML tags, but use them to interpret the content of the page.</p>
+  </ol>
+  <h2>JavaScript</h2>
+  <p>
+    JavaScript (/ˈdʒɑːvəˌskrɪpt/[6]), often abbreviated as JS, is a high-level, dynamic, weakly typed, prototype-based, multi-paradigm, and interpreted programming language. Alongside HTML and CSS, JavaScript is one of the three core technologies of World Wide Web content production. It is used to make webpages interactive and provide online programs, including video games. The majority of websites employ it, and all modern web browsers support it without the need for plug-ins by means of a built-in JavaScript engine. Each of the many JavaScript engines represent a different implementation of JavaScript, all based on the ECMAScript specification, with some engines not supporting the spec fully, and with many engines supporting additional features beyond ECMA.
+  </p>
 </body>
 </html>
