--- a/index.html
+++ b/index.html
@@ -1,31 +1,18 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
 <head>
-    <title>WEB1 - Index</title>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="style.css">
+  <title>WEB1 - Welcome</title>
+  <meta charset="utf-8">
 </head>
-
 <body>
-    <h1><a href="index.html">Index</a></h1>
-        <div id="grid">
-            <ul>
-                <li><a href="1.html">HTML</a></li>
-                <li><a href="2.html">CSS</a></li>
-                <li><a href="3.html">JavaScript</a></li>
-            </ul>
-            
-            <div id="article">
-                <h2>Index 공부하자!</h2>
-
-                HTML/CSS->JS->J<strong>S library-><u>node</u> js</storo>, express(back end)
-
-                <p><a href="https://www.w3.org/html/" target="_blank", title="HTML5 specification">Hypertext Markup Language (HTML)</a> is the standard markup language for creating web pages and web applications. With Cascading Style Sheets (CSS) and JavaScript, it forms a triad of cornerstone technologies for the World Wide Web.[4]</p>
-
-                <p>Web browsers receive HTML documents from a web server or from local storage and render the documents into multimedia web pages. HTML describes the structure of a web page semantically and originally included cues for the appearance of the document.</p>
-                <img src="coding.jpg" width="100%">
-                <p style="margin-top:40px;">HTML elements are the building blocks of HTML pages. With HTML constructs, images and other objects such as interactive forms may be embedded into the rendered page. HTML provides a means to create structured documents by denoting structural semantics for text such as headings, paragraphs, lists, links, quotes and other items. HTML elements are delineated by tags, written using angle brackets. Tags such as "img" and "input" directly introduce content into the page. Other tags such as "p" surround and provide information about document text and may include other tags as sub-elements. Browsers do not display the HTML tags, but use them to interpret the content of the page.</p>
-            </div>
-        </div>
+  <h1><a href="index.html">WEB</a></h1>
+  <ol>
+    <li><a href="1.html">HTML</a></li>
+    <li><a href="2.html">CSS</a></li>
+    <li><a href="3.html">JavaScript</a></li>
+  </ol>
+  <h2>WEB</h2>
+  <p>The World Wide Web (abbreviated WWW or the Web) is an information space where documents and other web resources are identified by Uniform Resource Locators (URLs), interlinked by hypertext links, and can be accessed via the Internet.[1] English scientist Tim Berners-Lee invented the World Wide Web in 1989. He wrote the first web browser computer program in 1990 while employed at CERN in Switzerland.[2][3] The Web browser was released outside of CERN in 1991, first to other research institutions starting in January 1991 and to the general public on the Internet in August 1991.
+  </p>
 </body>
 </html>
